--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,31 @@
   --lineHeightTight: 1;
   /* FONT + UI COLOR */
   --Black: rgba(0, 0, 0, 1.0);
-  --TranslucentBlack: rgba(0, 0, 0, 0.5);
-  --White: rgb(255, 255, 255);
-  --Color-1: rgb(232, 224, 213);
+  --TranslucentBlack: rgba(0, 0, 0, 0.8);
+  --White: rgb(227, 229, 242);
+  --BrightWhite: rgb(255, 255, 255);
+  /* --Color-1: rgb(232, 224, 213); */
+  --Color-1: rgb(255, 245, 222);
+
   --Color-2: rgb(227, 230, 245);
-  --Color-3: rgb(156, 31, 83);
+  --Color-3: rgb(105, 33, 79);
   --Color-4: rgb(0, 7, 75);
+  /* --Color-5: rgb(225, 215, 237); */
+  --Color-5: rgb(254, 240, 255);
+  /* --Color-6: rgb(206, 222, 240); */
+  --Color-6: rgb(232, 248, 252);
+  /* --Color-7: rgb(195, 219, 207); */
+  --Color-7: rgb(217, 244, 219);
+
+
+
+  --Swatch1: #476730;
+  --Swatch2: #58af55;
+  --Swatch3: #c5dc69;
+  --Swatch4: #84a83f;
+  --Swatch5: #e6dc4d;
+  --Swatch6: #c59f28;
+  --Swatch7: #f6d848;
 }
 
 /* Hide scrollbars */
@@ -175,7 +194,7 @@ div~div {
 }
 
 .bottom-space {
-  padding-bottom: 7.5rem !important;
+  padding-bottom: 3.75rem !important;
   margin-bottom: 0 !important;
 }
 
@@ -185,6 +204,12 @@ div~div {
 
 .side-space-none {
   margin: 0 !important;
+}
+
+@media (max-width:1000px) {
+  .sc-no-space {
+    margin: 0 !important;
+  }
 }
 
 h1~h3 {
@@ -207,6 +232,14 @@ h2~h1 {
   margin-top: 1.75rem;
 }
 
+h1~p {
+  margin-top: 1.75em;
+}
+
+p~h1 {
+  margin-top: 2.75em;
+}
+
 h3~p {
   margin-top: 1.75em;
 }
@@ -225,6 +258,15 @@ hr~p {
 
 h3~hr {
   margin-top: 1rem;
+}
+
+
+h2~h3 {
+  margin-top: 0.75em;
+}
+
+img~h3 {
+  margin-top: 1.75rem;
 }
 
 /* NOTE */
@@ -254,7 +296,11 @@ h2.type-specimen~h1.type-specimen {
 }
 
 h3~.box {
-  margin-top: 3rem;
+  margin-top: 1.75rem;
+}
+
+.box~h3 {
+  margin-top: 3.75em;
 }
 
 .box~p {
@@ -346,7 +392,8 @@ h2 {
   line-height: var(--lineHeightTight);
 }
 
-h3 {
+h3,
+.h3 {
   font-family: var(--FontSansSerif);
   font-size: var(--FontSizeHeading3);
   font-weight: var(--FontBold);
@@ -368,7 +415,7 @@ p {
   line-height: 0.4;
 }
 
-@media (max-width: 512px) {
+@media (max-width: 576px) {
   h1 {
     font-size: var(--FontSizeHeading1SS);
   }
@@ -459,7 +506,7 @@ a {
 }
 
 a:hover {
-  color:
+  color: var(--Color-6);
 }
 
 
@@ -506,13 +553,12 @@ a:hover {
 
 header {
   top: 0;
+  height: 0;
   width: 100%;
-  padding: 2rem 1rem;
-  position: fixed;
-  z-index: 1;
+  position: sticky;
   align-items: center;
   transition: top 0.3s ease-in-out;
-  /* Adjust the duration and easing as needed */
+  z-index: 1000;
 }
 
 header.hidden {
@@ -524,7 +570,7 @@ header.hidden {
 
 
 
-
+/* BUTTONS */
 
 header .container {
   /* background-color: rgb(255, 0, 0); */
@@ -533,18 +579,49 @@ header .container {
   justify-content: space-between;
 }
 
-.logo {
+.button {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+  align-self: self-start;
+  padding: 1rem;
+  transition: 500ms ease-in-out;
+  width: inherit;
+  margin: 1rem 0;
+  z-index: 1000;
 }
 
-.logo-mark {
-  position: relative;
+@media (min-width: 576px) {
+  .buttons {
+    display: flex;
+    padding: 2rem;
+    gap: 1rem;
+  }
+}
+
+.button:hover {
+  background-color: transparent;
+}
+
+header .buttons {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  padding: 2rem;
+  gap: 1rem;
+  margin: auto;
+  margin-right: 0;
+}
+
+/* LOGO MARKS */
+
+header .buttons.logo-mark {
+  margin-left: 0 !important;
+  fill: var(--Black);
+  transition: 500ms ease-in-out;
+}
+
+header .buttons.logo-mark:hover {
+  fill: var(--BrightWhite);
 }
 
 .logo-mark img {
@@ -578,10 +655,34 @@ header .container {
 /* HERO + IMAGE + SECTIONS + COLUMNS + ROW*/
 /* HERO */
 
+.statement {
+  h1 {
+    font-size: clamp(4.5rem, 10vw, 8.5rem);
+  }
+
+  /* @media (max-width:1282px) {
+    h1 {
+      font-size: 6.5rem;
+    }
+  }
+
+  @media (max-width:1010px) {
+    h1 {
+      font-size: 4.5rem;
+    }
+  }
+
+  @media (max-width:772px) {
+    h1 {
+      font-size: 3rem;
+    }
+  } */
+
+}
 
 /* IMAGES */
 .screen-fit {
-  height: 100vh;
+  height: 90vh;
   /* DIV STARTING WIDTH*/
   width: 0;
   margin-top: 0 !important;
@@ -609,7 +710,7 @@ header .container {
   max-width: 55%;
 }
 
-@media (max-width: 512px) {
+@media (max-width: 576px) {
   .screen-fit-column {
     max-width: 100%;
     height: 200vh;
@@ -626,15 +727,32 @@ header .container {
   margin-left: 1.5rem;
 }
 
+.small-img {
+  height: 60vh;
+}
 
 /* SVG */
 
-.svg-scale-a {
-  scale: 100%;
+@media (max-width: 576px) {
+  .screen-fit-column {
+    max-width: 100%;
+    height: 200vh;
+  }
 }
 
-.svg-scale-b {
-  scale: 75%;
+@media (min-width: 576px) {
+  .svg-scale-a {
+    scale: 50%;
+  }
+
+  .svg-scale-b {
+    max-width: 75%;
+    min-height: 15.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
 }
 
 .center-box.svg {
@@ -653,11 +771,9 @@ header .container {
 }
 
 .inset-box {
-  border: 1px solid black;
-  box-shadow: inset 0.5rem 0.5rem black;
-  background-color: rgb(3, 160, 231);
+  /* border: 1px solid black;
+  box-shadow: inset 0.5rem 0.5rem var(--Color-4); */
   padding: 1.75rem 0;
-
   padding-top: -1.5rem;
   display: flex;
   flex-direction: column;
@@ -667,7 +783,7 @@ header .container {
   min-width: 20rem;
 
   h2,
-  div {
+  .type-specimen-container {
     margin-left: auto !important;
     margin-right: auto !important;
     padding: 0 !important;
@@ -710,8 +826,8 @@ header .container {
 .hover-box {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
-  box-shadow: 0.5rem 0.5rem black;
+  /* border: 1px solid black;
+  box-shadow: 0.5rem 0.5rem var(--Color-4); */
   background-color: white;
   padding: 0.5rem;
   margin-top: 0;
@@ -785,10 +901,15 @@ header .container {
 }
 
 .inner-border {
-  border: 1px solid var(--TranslucentBlack);
+  /* border: 1px solid var(--TranslucentBlack);
   border-left: 2px solid var(--TranslucentBlack);
-  border-top: 2px solid var(--TranslucentBlack);
+  border-top: 2px solid var(--TranslucentBlack); */
   padding: 2rem;
+}
+
+.inner-border-tight {
+  padding: 1rem 0;
+  margin: 0 !important;
 }
 
 .no-line {
@@ -831,6 +952,16 @@ header .container {
   margin-right: 1rem;
 }
 
+.portrait-box {
+  height: 40em;
+  width: 30em;
+}
+
+.fill-box {
+  height: 100%;
+  width: 100%;
+}
+
 /* FULL SCREEN IMG */
 
 .full-screen {
@@ -853,36 +984,65 @@ header .container {
   margin-right: auto;
 }
 
-.content-row.double-height {
-  height: 200vh;
+.content-row.reverse {
+  flex-direction: row-reverse;
+}
+
+@media (min-width: 1001px) {
+  .content-row.double-height {
+    height: 200vh;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container.double-height {
+    min-height: auto !important;
+  }
 }
 
 .content-row.single-height {
   height: 100vh;
 }
 
-
-
 .container.double-height {
   min-height: 200vh;
 }
 
 .single-height {
-  height: 100vh;
+  min-height: 100vh;
+}
+
+.single-half-height {
+  min-height: 140vh;
+}
+
+.half-height {
+  height: 50vh;
 }
 
 @media (min-width: 1001px) {
-  .half-height {
-    min-height: 50vh;
-  }
-
   .content-row.single-height-toggle {
     height: 100vh !important;
+  }
+
+  .content-row.keep-left {
+    justify-content: flex-start;
   }
 }
 
 .content-row.single-height-toggle {
   height: 75vh;
+  display: flex !important;
+}
+
+@media (min-width: 1001px) {
+  .single-height-mobile {
+    height: 100vh !important;
+  }
+}
+
+.single-height-mobile {
+  height: 100vh !important;
   display: flex !important;
 }
 
@@ -902,6 +1062,7 @@ header .container {
     left: 0;
     justify-content: flex-start;
     overflow: visible;
+    z-index: 1;
   }
 }
 
@@ -914,7 +1075,11 @@ header .container {
 }
 
 .infront {
-  z-index: +1;
+  z-index: 100;
+}
+
+.inback {
+  z-index: 0;
 }
 
 
@@ -1000,18 +1165,9 @@ header .container {
 
 @media (min-width: 1001px) {
 
-  .column.align-left h1,
-  .column.align-left h2,
-  .column.align-left h3,
-  .column.align-left p {
-    padding-right: 1.5rem;
-  }
-
-  .column.align-right h1,
-  .column.align-right h2,
-  .column.align-right h3,
-  .column.align-right p {
-    padding-left: 1.5rem;
+  .align-right .text-box {
+    padding-left: 2.75rem;
+    padding-right: 0;
   }
 }
 
@@ -1020,7 +1176,7 @@ header .container {
   margin-bottom: 0;
 }
 
-@media (max-width: 512px) {
+@media (max-width: 576px) {
   .column-single {
     width: auto;
   }
@@ -1065,10 +1221,11 @@ header .container {
   margin-bottom: 50vh;
 }
 
-.sticky {
-  position: sticky;
-  top: 0em;
-  z-index: -1;
+@media (min-width: 1001px) {
+  .sticky {
+    position: sticky;
+    top: 0em;
+  }
 }
 
 /* EXPANDING DIV COLUMN */
@@ -1188,6 +1345,10 @@ svg {
 
 /* COLOR */
 
+.bg-none {
+  background-color: transparent;
+}
+
 .white {
   background-color: var(--White);
 }
@@ -1198,18 +1359,47 @@ svg {
 
 .bg-color-1 {
   background-color: var(--Color-1);
+  mix-blend-mode: multiply;
 }
 
 .bg-color-2 {
   background-color: var(--Color-2);
+  mix-blend-mode: multiply;
 }
 
 .bg-color-3 {
   background-color: var(--Color-3);
+  mix-blend-mode: multiply;
 }
 
 .bg-color-4 {
   background-color: var(--Color-4);
+  mix-blend-mode: multiply;
+}
+
+.bg-color-5 {
+  background-color: var(--Color-5);
+  mix-blend-mode: multiply;
+}
+
+.bg-color-6 {
+  background-color: var(--Color-6);
+  mix-blend-mode: multiply;
+}
+
+.bg-color-7 {
+  background-color: var(--Color-7);
+  mix-blend-mode: multiply;
+}
+
+.text-bright-white,
+.text-bright-white * {
+  color: var(--BrightWhite) !important;
+}
+
+.text-black,
+.text-black * {
+  color: var(--Black) !important;
 }
 
 .text-color-1,
@@ -1236,107 +1426,177 @@ svg {
   fill: var(--Black);
 }
 
+.svg-translucent-black * {
+  fill: var(--TranslucentBlack);
+}
+
 .svg-color-white {
   fill: rgb(255, 255, 255);
 }
 
+.svg-color-1 {
+  fill: var(--Color-1);
+}
+
 .svg-color-2 {
-  fill: rgb(227, 230, 245);
+  fill: var(--Color-2);
+}
+
+.svg-color-3 {
+  fill: var(--Color-3);
 }
 
 .svg-color-4 {
   fill: var(--Color-4);
 }
 
-
-
-
-
-/* SITE GRAPHICS */
-
-.svg-180 {
-  transform: rotate(180deg);
+.svg-color-5 {
+  fill: var(--Color-5);
 }
 
-.graphic-container-top {
-  width: 100%;
-  height: 0;
-  margin: 0;
-  margin-top: -1px;
+.svg-color-6 {
+  fill: var(--Color-6);
 }
 
-.graphic-align-top {
-  position: absolute;
-  z-index: 100;
-  margin: 0;
-  width: 100%;
-  height: 100%;
+.svg-color-7 {
+  fill: var(--Color-7);
 }
 
-.graphic-hover-bottom {
-  z-index: 100;
-  width: 100%;
-  height: auto;
-  margin: 0;
-  margin-top: auto;
+.svg-color-8 {
+  fill: var(--Color-8);
 }
 
-.graphic-bottom {
-  margin-bottom: -1px;
+.svg-color-9 {
+  fill: var(--Color-9);
 }
 
-.graphic-float-bottom {
-  position: absolute;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+.svg-color-10 {
+  fill: var(--Color-10);
 }
 
-@media (min-width: 1001px) {
-  .graphic-space {
-    padding-bottom: 10rem;
-  }
 
-  .graphic-container-bottom {
-    z-index: 100;
+
+
+
+
+
+
+
+
+/* COLOR SWATCHES */
+
+.color-swatch {
+  height: 6rem;
+  margin: .25rem 0 !important;
+  width: 16rem
+}
+
+@media (max-width: 1000px) {
+  .color-swatch {
     width: 100%;
-    height: auto;
-    margin: 0;
-    margin-top: auto;
-    margin-bottom: -0.5px;
-  }
-
-  .graphic-align-bottom {
-    position: absolute;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    margin: 0 !important;
   }
 }
 
-
-.keep-flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+.color-swatch h2 {
+  font-size: 1.5em;
 }
 
-.keep-column {
-  display: flex !important;
-  flex-direction: column !important;
-  justify-content: center !important;
-  align-items: center !important;
+.swatch-box {
+  margin: 0 !important;
+  width: auto;
+  max-width: 100%;
+}
+
+@media (max-width: 1000px) {
+  .swatch-box {
+    margin-top: .5rem !important;
+    margin-bottom: .5rem !important;
+  }
+}
+
+.color-swatch {
+  padding: 1rem;
+}
+
+.swatch-white {
+  background-color: var(--BrightWhite);
+}
+
+.swatch-1 {
+  background-color: var(--Swatch1);
+}
+
+.swatch-2 {
+  background-color: var(--Swatch2);
+}
+
+.swatch-3 {
+  background-color: var(--Swatch3);
+}
+
+.swatch-4 {
+  background-color: var(--Swatch4);
+}
+
+.swatch-5 {
+  background-color: var(--Swatch5);
+}
+
+.swatch-6 {
+  background-color: var(--Swatch6);
+}
+
+.swatch-7 {
+  background-color: var(--Swatch7);
+}
+
+.swatch-text-dark {
+  color: var(--Swatch1);
 }
 
 
 
+/* MORE CONTENT */
 
+.more-content {}
+
+.more-content .column {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+@media (max-width: 1000px) {
+  .more-content .column {
+    min-height: 70vh;
+  }
+
+  .more-content .screen-fit {
+    max-width: 60vw;
+    margin-right: auto;
+  }
+}
+
+a img {
+  transition: 500ms ease-in-out;
+}
+
+a img:hover {
+  filter: saturate(125%) contrast(125%);
+}
+
+.img-border {
+  border: 0px solid var(--Color-3);
+}
+
+a.img-border {
+  transition: 500ms ease-in-out;
+}
+
+a.img-border:hover {
+  /* border: 4px solid var(--Color-3); */
+  box-shadow: 0 0 3rem 0 rgb(0 0 0 / .2);
+}
 
 
 /* CURSOR INTERACRIONS */
@@ -1344,11 +1604,6 @@ svg {
 .none-interactive {
   pointer-events: none;
 }
-
-
-
-
-
 
 
 /* FOOTER */
@@ -1366,9 +1621,75 @@ footer .container {
 }
 
 
+/* CASE STUDY THUMBNAILS */
 
+.content-logo.cs-thumbnail {
+  height: 3.75rem;
+}
 
+@media (max-width: 1000px) {
+  .mobile-thumb {
+    align-content: center;
+  }
 
+  .mobile-thumb.column {
+    height: 60vh !important;
+    min-height: 60vh !important;
+  }
+
+  .mobile-thumb .screen-fit {
+    height: 60vh !important;
+    min-height: 60vh !important;
+  }
+
+  .mobile-thumb-text {
+    height: auto;
+    margin-bottom: 5rem !important;
+  }
+
+  .mobile-thumb .single-height {
+    height: auto;
+    min-height: auto;
+  }
+}
+
+/* HERO TEXT ANIMATION */
+
+.animated-word {
+  height: clamp(4.5rem, 10vw, 8.5rem);
+}
+
+.word {
+  position: absolute;
+  opacity: 0;
+}
+
+.word2 {
+  position: absolute;
+  opacity: 0;
+}
+
+.letter {
+  display: inline-block;
+  position: relative;
+  float: left;
+  transform: translateZ(25px);
+  transform-origin: 50% 50% 25px;
+}
+
+.letter.out {
+  transform: rotateX(90deg);
+  transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.letter.behind {
+  transform: rotateX(-90deg);
+}
+
+.letter.in {
+  transform: rotateX(0deg);
+  transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
 
 
 
